.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:41:22 **** Clean-only build of configuration Debug for project stm32f407GDisc_drivers ****
make -j4 clean 
rm -rf ./drivers/Src/stm32f407xx_gpio_driver.cyclo ./drivers/Src/stm32f407xx_gpio_driver.d ./drivers/Src/stm32f407xx_gpio_driver.o ./drivers/Src/stm32f407xx_gpio_driver.su
rm -rf ./Startup/startup_stm32f407vgtx.d ./Startup/startup_stm32f407vgtx.o
rm -rf ./Src/syscalls.cyclo ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.cyclo ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su ./Src/togglebutton_main.cyclo ./Src/togglebutton_main.d ./Src/togglebutton_main.o ./Src/togglebutton_main.su
rm -rf default.size.stdout stm32f407GDisc_drivers.elf stm32f407GDisc_drivers.list stm32f407GDisc_drivers.map
 
23:41:27 **** Incremental Build of configuration Debug for project stm32f407GDisc_drivers ****
make -j4 all 
arm-none-eabi-gcc "../drivers/Src/stm32f407xx_gpio_driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -I"C:/Users/anhhu/Desktop/Workspace_Embedded/stm32f407GDisc_drivers/drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"drivers/Src/stm32f407xx_gpio_driver.d" -MT"drivers/Src/stm32f407xx_gpio_driver.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "drivers/Src/stm32f407xx_gpio_driver.o"
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f407vgtx.d" -MT"Startup/startup_stm32f407vgtx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f407vgtx.o" "../Startup/startup_stm32f407vgtx.s"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -I"C:/Users/anhhu/Desktop/Workspace_Embedded/stm32f407GDisc_drivers/drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -I"C:/Users/anhhu/Desktop/Workspace_Embedded/stm32f407GDisc_drivers/drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../drivers/Src/stm32f407xx_gpio_driver.c: In function 'GPIO_Init':
../drivers/Src/stm32f407xx_gpio_driver.c:148:29: error: invalid type argument of '->' (have 'unsigned int')
  148 |                         EXTI->FTSR |=(1 << Config1Bit);
      |                             ^~
../drivers/Src/stm32f407xx_gpio_driver.c:148:55: error: expected ')' before ';' token
  148 |                         EXTI->FTSR |=(1 << Config1Bit);
      |                                                       ^
      |                                                       )
In file included from C:/Users/anhhu/Desktop/Workspace_Embedded/stm32f407GDisc_drivers/drivers/Inc/stm32f407xx_gpio_driver.h:11,
                 from ../drivers/Src/stm32f407xx_gpio_driver.c:1:
C:/Users/anhhu/Desktop/Workspace_Embedded/stm32f407GDisc_drivers/drivers/Inc/stm32f407xx.h:155:65: note: to match this '('
  155 | #define EXTI                                                    ((EXTI_RegDef_t *) EXTI_BASEADDR
      |                                                                 ^
../drivers/Src/stm32f407xx_gpio_driver.c:148:25: note: in expansion of macro 'EXTI'
  148 |                         EXTI->FTSR |=(1 << Config1Bit);
      |                         ^~~~
../drivers/Src/stm32f407xx_gpio_driver.c:148:56: error: expected ';' before '}' token
  148 |                         EXTI->FTSR |=(1 << Config1Bit);
      |                                                        ^
      |                                                        ;
  149 |                 }
      |                 ~                                       
make: *** [drivers/Src/subdir.mk:19: drivers/Src/stm32f407xx_gpio_driver.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.
